# NetConfig

./: .gitignore  Cargo.toml  README.md
.github/workflows/: Auto-Update.yml  auto.yml
Clash-Verge/Config/: Merge-DNS.yaml
Config/Clash-Verge/Config/: Main.yaml  Merge-Subscription.yaml
Rewirte/: BlockHTTPDNS.sgmodule
Rules/: AppleAI.list  README.md
Rules/Merge/: HTTPDNS.list
Tool/: config.example.toml  config.toml
Tool/src/: main.rs
src/: dedup.rs
