[package]
name = "ruletool"
version = "0.1.0"
edition = "2024"

[dependencies]
rayon = "1.10"
ipnet = "2.10"
walkdir = "2.5"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["rustls-tls"], default-features = false }
toml = "0.8"
serde = { version = "1.0", features = ["derive"] }
futures = "0.3"
